# keera-diamondcard-sms-trayicon

./: .gitignore  Interface.glade  LICENSE  README  Setup.hs  keera-diamondcard-sms-trayicon.cabal  metrics.sh
concept/: Main.hs  sms-1.glade
data/: Interface.glade  README  keera-diamondcard-sms-trayicon.desktop
src/: CombinedEnvironment.hs  Controller.hs  Main.hs  Paths.hs  View.hs
src/Control/Concurrent/Model/: ReactiveFields.hs  THAccessors.hs  THFields.hs
src/Controller/: ConditionDirection.hs  Conditions.hs
src/Controller/Conditions/: AccountID.hs  CanSend.hs  Config.hs  Destination.hs  InfoLabel.hs  Message.hs  NumberFormat.hs  Pincode.hs  PopupMenu.hs  Preferences.hs  PreferencesDialog.hs  PreferencesDialogDestroy.hs  Quit.hs  Send.hs  Sender.hs  SmsWindow.hs  Status.hs
src/Graphics/UI/Gtk/: Reactive.hs
src/Graphics/UI/Simplify/: EntryBasic.hs  Reactive.hs
src/Hails/MVC/: DefaultGtkEnvironment.hs
src/Hails/MVC/Model/: ReactiveFields.hs  THFields.hs
src/Model/: Model.hs  ProtectedModel.hs  ReactiveModel.hs
src/Model/ProtectedModel/: Initialisation.hs  Preferences.hs  ProtectedFields.hs  ProtectedModelInternals.hs  Reactive.hs  SMS.hs  Status.hs
src/Model/ReactiveModel/: Initialisation.hs  ModelEvents.hs  Preferences.hs  ReactiveFields.hs  ReactiveModelInternals.hs  SMS.hs  Status.hs
src/Paths/: CustomPaths.hs
src/View/: Objects.hs
src/View/MainWindow/: Objects.hs
