-- Copyright   : (C) Keera Studios Ltd, 2015; (C) Ivan Perez, 2012
-- License     : BSD3
-- Maintainer  : support@keera.co.uk

Name:                keera-diamondcard-sms-trayicon

Version:             0.1.1

Synopsis:            Send SMS's from your system taskbar.

Homepage:            http://keera.es/blog/community/

License:             OtherLicense

License-file:        LICENSE

Author:              Ivan Perez

Maintainer:          support@keera.co.uk

Stability:           Provisional

Category:            Text

Build-type:          Simple

Data-files: data/Interface.glade
            data/*.png

Cabal-version:       >=1.2


Executable keera-diamondcard-sms-trayicon
  Main-is: Main.hs
  hs-source-dirs: src/

  if os(windows)
   ghc-options: -threaded -Wall -fno-warn-unused-do-bind -O2 -optl-mwindows
  else
   ghc-options: -threaded -Wall -fno-warn-unused-do-bind -O2

  Build-depends: base >= 4.0,
                 -- Comm
                 mtl,
                 -- Advanced monad control
                 IfElse,
                 -- TH
                 template-haskell,

                 -- UI
                 -- glade,
                 gtk,
                 glib,

                 -- File access
                 directory,
                 filepath,

                 -- Keera packages
                 gtk-helpers >= 0.0.4,
                 keera-hails-reactivevalues,
                 keera-hails-reactive-gtk,
                 keera-hails-mvc-environment-gtk,
                 keera-hails-mvc-model-protectedmodel,
                 keera-hails-mvc-solutions-config,
                 keera-hails-mvc-view,
                 keera-hails-mvc-view-gtk,
                 keera-network-sms-diamondcard >= 0.0.2
