-- Copyright   : (C) Keera Studios Ltd, 2015; (C) Ivan Perez, 2012
-- License     : BSD3
-- Maintainer  : support@keera.co.uk

name:                keera-diamondcard-sms-trayicon

version:             0.1.1

synopsis:            Send SMS's from your system taskbar.

homepage:            http://keera.es/blog/community/

license:             OtherLicense

license-file:        LICENSE

author:              Ivan Perez

maintainer:          support@keera.co.uk

stability:           Provisional

category:            Text

build-type:          Simple

data-files: data/Interface.glade
            data/*.png

cabal-version:       >=1.2


executable keera-diamondcard-sms-trayicon
  main-is: Main.hs
  hs-source-dirs: src/

  if os(windows)
   ghc-options: -threaded -Wall -fno-warn-unused-do-bind -O2 -optl-mwindows
  else
   ghc-options: -threaded -Wall -fno-warn-unused-do-bind -O2

  build-depends: base >= 4.0,
                 -- Comm
                 mtl,
                 -- Advanced monad control
                 IfElse,
                 -- TH
                 template-haskell,

                 -- UI
                 -- glade,
                 gtk,
                 glib,

                 -- File access
                 directory,
                 filepath,

                 -- Keera packages
                 gtk-helpers >= 0.0.4,
                 keera-hails-reactivevalues,
                 keera-hails-reactive-gtk,
                 keera-hails-mvc-environment-gtk,
                 keera-hails-mvc-model-protectedmodel,
                 keera-hails-mvc-solutions-config,
                 keera-hails-mvc-view,
                 keera-hails-mvc-view-gtk,
                 keera-network-sms-diamondcard >= 0.0.2
