-- Copyright   : (C) Keera Studios Ltd, 2015; (C) Ivan Perez, 2012
-- License     : BSD3
-- Maintainer  : support@keera.co.uk

cabal-version:       >=1.2
build-type:          Simple

name:                keera-diamondcard-sms-trayicon
version:             0.1.1
author:              Ivan Perez
maintainer:          support@keera.co.uk
homepage:            http://keera.es/blog/community/
license:             OtherLicense
license-file:        LICENSE
copyright:           (C) Keera Studios Ltd, 2015; (C) Ivan Perez, 2012
category:            Text
synopsis:            Send SMS's from your system taskbar.
description:         Send SMS's from your system taskbar.
data-files:
  data/Interface.glade
  data/*.png
stability:           Provisional


executable keera-diamondcard-sms-trayicon
  main-is: Main.hs
  hs-source-dirs: src/

  if os(windows)
   ghc-options: -threaded -Wall -fno-warn-unused-do-bind -O2 -optl-mwindows
  else
   ghc-options: -threaded -Wall -fno-warn-unused-do-bind -O2

  build-depends: base >= 4.0,
                 -- Comm
                 mtl,
                 -- Advanced monad control
                 IfElse,
                 -- TH
                 template-haskell,

                 -- UI
                 -- glade,
                 gtk,
                 glib,

                 -- File access
                 directory,
                 filepath,

                 -- Keera packages
                 gtk-helpers >= 0.0.4,
                 keera-hails-reactivevalues,
                 keera-hails-reactive-gtk,
                 keera-hails-mvc-environment-gtk,
                 keera-hails-mvc-model-protectedmodel,
                 keera-hails-mvc-solutions-config,
                 keera-hails-mvc-view,
                 keera-hails-mvc-view-gtk,
                 keera-network-sms-diamondcard >= 0.0.2
